--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.1",
     "react-router-dom": "^6.20.1",
-    "tailwind-merge": "^2.1.0",
+    "recharts": "^2.15.0",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
